--- a/_posts/2011-12-10-daydreamer.textile
+++ b/_posts/2011-12-10-daydreamer.textile
@@ -3,6 +3,6 @@ layout: audio
 category: audio
 title: 'Daydreamer'
 file: 'daydreamer.mp3'
-background: '3971993438_8b7382604a_o.jpg'
-color: '#FF0000'
+background: '7142940993_79b928438b_o.jpg'
+color: '#19089B'
 ---
