--- a/_posts/2012-12-30-wurmloch.textile
+++ b/_posts/2012-12-30-wurmloch.textile
@@ -4,7 +4,7 @@ category: audio
 title: 'Wurmloch'
 file: 'wurmloch.mp3'
 background: '3971204855_9516000057_o.jpg'
-color: '#CCC'
+color: '#FDDFB2'
 ---
 
 That’s all fine but using rotate and translate to move a camera where you want it and point toward what you want to see is not always easy. For example if we wanted the camera to always point at a specific one of the ‘F’s it would take some pretty crazy math to compute how to rotate the camera to point at that ‘F’ while it goes around the circle of ‘F’s.
