add correct track names

--- a/_posts/2012-10-07-wurmloch.textile
+++ b/_posts/2012-10-07-wurmloch.textile
@@ -2,7 +2,7 @@
 layout: audio
 category: audio
 title: 'Wurmloch'
-file: 'wurmloch.mp3'
+file: '2012-10-07-wurmloch.mp3'
 background: '3971204855_9516000057_o.jpg'
 color: '#FDDFB2'
 ---
