--- a/_posts/2010-02-24-car-driver.textile
+++ b/_posts/2010-02-24-car-driver.textile
@@ -1,9 +1,9 @@
 ---
 layout: audio
-title: 'Alone'
+title: 'Car Driver'
 tags: 'test'
 category: audio
-file: 'alone.mp3'
+file: '2010-02-24-car-driver.mp3'
 background: '3972080296_31bce23637_o.jpg'
 color: '#FF67AA'
 ---
