--- a/_posts/2012-03-24-sid-commodore.textile
+++ b/_posts/2012-03-24-sid-commodore.textile
@@ -1,8 +1,9 @@
 ---
 layout: audio
-title: 'Cave'
+title: 'Sid-Commodore'
+tags: 'test'
 category: audio
-file: 'cave.mp3'
+file: '2012-03-24-sid-commodore.mp3'
 background: '3972080296_31bce23637_o.jpg'
 color: '#FF67AA'
 ---
