--- a/_posts/2013-02-10-daydreamer.textile
+++ b/_posts/2013-02-10-daydreamer.textile
@@ -2,7 +2,7 @@
 layout: audio
 category: audio
 title: 'Daydreamer'
-file: 'daydreamer.mp3'
+file: '2013-02-10-daydreamer.mp3'
 background: '7142940993_79b928438b_o.jpg'
 color: '#19089B'
 ---
