--- a/event/_posts/stoffelfabrik-projekt-stoffel-tschuess-widnau-ch.textile
+++ b/event/_posts/stoffelfabrik-projekt-stoffel-tschuess-widnau-ch.textile
@@ -1,4 +1,4 @@
 ---
 layout: default
-title: 'Stoffelfabrik Projekt Stoffel Tschüss Widnau/CH'
+title:'Stoffelfabrik Projekt Stoffel Tschüss Widnau'
 ---
