--- a/event/_posts/2012-05-18-kugel-8jahre-kultur-elektrode-plattentaufe.textile
+++ b/event/_posts/2012-05-18-kugel-8jahre-kultur-elektrode-plattentaufe.textile
@@ -1,4 +1,4 @@
 ---
 layout: default
-title: 'Kugl 8Jahre Kultur Elektrode Plattentaufe SG/CH'
+title:'Kugl 8Jahre Kultur Elektrode Plattentaufe'
 ---
