--- a/audio/_posts/2005-10-06-cave.textile
+++ b/audio/_posts/2005-10-06-cave.textile
@@ -1,6 +1,7 @@
 ---
 layout: audio
 title: 'Cave'
+tags: 'othertag'
 file: '2005-10-06-cave.mp3'
 background: '3972080296_31bce23637_o.jpg'
 color: '#FF67AA'
