--- a/audio/_posts/2005-03-03-namenloser-schlaf.textile
+++ b/audio/_posts/2005-03-03-namenloser-schlaf.textile
@@ -1,6 +1,6 @@
 ---
 layout: audio
-title: 'Namenloser-Schlaf'
+title: 'Namenloser Schlaf'
 file: '2005-03-03-namenloser-schlaf.mp3'
 background: '3972080296_31bce23637_o.jpg'
 color: '#FF67AA'
