--- a/audio/_posts/2005-10-06-berlin-lover-2.textile
+++ b/audio/_posts/2005-10-06-berlin-lover-2.textile
@@ -1,6 +1,6 @@
 ---
 layout: audio
-title: 'Berlin-Lover-2'
+title: 'Berlin Lover-2'
 tags: 'othertag'
 file: '2005-10-06-berlin-lover-2.mp3'
 background: '3972080296_31bce23637_o.jpg'
