--- a/audio/_posts/2010-06-02-i-need-space.textile
+++ b/audio/_posts/2010-06-02-i-need-space.textile
@@ -1,6 +1,6 @@
 ---
 layout: audio
-title: 'I-need-Space'
+title: 'I need Space'
 file: '2010-06-02-i-need-space.mp3'
 background: '3972080296_31bce23637_o.jpg'
 color: '#FF67AA'
