--- a/audio/_posts/2010-12-23-c64-machinedrum-2xgameboy-spaceecho.textile
+++ b/audio/_posts/2010-12-23-c64-machinedrum-2xgameboy-spaceecho.textile
@@ -1,6 +1,6 @@
 ---
 layout: audio
-title: 'Machinedrum-2xGameboy-Space-Echo'
+title: 'Machinedrum 2xGameboy Space Echo'
 file: '2010-12-23-c64-machinedrum-2xgameboy-spaceecho.mp3'
 background: '3972080296_31bce23637_o.jpg'
 color: '#FF67AA'
