--- a/audio/_posts/2011-11-10-sunsyn-tune1-01.textile
+++ b/audio/_posts/2011-11-10-sunsyn-tune1-01.textile
@@ -1,6 +1,6 @@
 ---
 layout: audio
-title: 'SunSyn-tune1-01'
+title: 'SunSyn tune1 01'
 file: '2011-11-10-sunsyn-tune1-01.mp3'
 background: '3972080296_31bce23637_o.jpg'
 color: '#FF67AA'
