--- a/audio/_posts/2012-04-16-sid-valley.textile
+++ b/audio/_posts/2012-04-16-sid-valley.textile
@@ -1,6 +1,6 @@
 ---
 layout: audio
-title: 'Sid-Valley'
+title: 'Sid Valley'
 file: '2012-04-16-sid-valley.mp3'
 background: '3972080296_31bce23637_o.jpg'
 color: '#FF67AA'
