--- a/audio/_posts/2009-11-05-police.textile
+++ b/audio/_posts/2009-11-05-police.textile
@@ -2,6 +2,6 @@
 layout: audio
 title: 'Police'
 file: '2009-11-05-police.mp3'
-background: '3972080296_31bce23637_o.jpg'
-color: '#FF67AA'
+background: '7142834345_72234c6b12_o.jpg'
+color: '#007AFF'
 ---
