--- a/audio/_posts/2005-05-02-drowning.textile
+++ b/audio/_posts/2005-05-02-drowning.textile
@@ -3,6 +3,6 @@ layout: audio
 title: 'drowning'
 tags: 'testtag othertag'
 file: '2005-05-02-drowning.mp3'
-background: '3972080296_31bce23637_o.jpg'
-color: '#FF67AA'
+background: 'P1030335.jpg'
+color: '#FFF'
 ---
