--- a/audio/_posts/2007-08-19-monosherman.textile
+++ b/audio/_posts/2007-08-19-monosherman.textile
@@ -2,6 +2,6 @@
 layout: audio
 title: 'Monosherman'
 file: '2007-08-19-monosherman.mp3'
-background: '3972080296_31bce23637_o.jpg'
+background: '4309061571_4daf359b45_o.jpg'
 color: '#FF67AA'
 ---
