--- a/audio/_posts/2007-12-06-nemesis.textile
+++ b/audio/_posts/2007-12-06-nemesis.textile
@@ -2,6 +2,6 @@
 layout: audio
 title: 'Nemesis'
 file: '2007-12-06-nemesis.mp3'
-background: '3972080296_31bce23637_o.jpg'
-color: '#FF67AA'
+background: '4558914476_c9af9266c4_o.jpg'
+color: '#363C80'
 ---
