--- a/audio/_posts/2008-04-16-haluzinogen.textile
+++ b/audio/_posts/2008-04-16-haluzinogen.textile
@@ -2,6 +2,6 @@
 layout: audio
 title: 'Haluzinogen'
 file: '2008-04-16-haluzinogen.mp3'
-background: '3972080296_31bce23637_o.jpg'
-color: '#FF67AA'
+background: '4749709937_1758c04639_o.jpg'
+color: '#FFF'
 ---
