--- a/audio/_posts/2008-10-06-monoloop.textile
+++ b/audio/_posts/2008-10-06-monoloop.textile
@@ -2,6 +2,6 @@
 layout: audio
 title: 'monoloop'
 file: '2008-10-06-monoloop.mp3'
-background: '3972080296_31bce23637_o.jpg'
-color: '#FF67AA'
+background: 'DSC00083.jpg'
+color: '#FFF'
 ---
