--- a/audio/_posts/2010-06-02-i-need-space.textile
+++ b/audio/_posts/2010-06-02-i-need-space.textile
@@ -2,6 +2,6 @@
 layout: audio
 title: 'I need Space'
 file: '2010-06-02-i-need-space.mp3'
-background: '3972080296_31bce23637_o.jpg'
+background: 'greatdivide_etm_2002220_lrg.jpg'
 color: '#FF67AA'
 ---
