--- a/audio/_posts/2010-12-23-c64-machinedrum-2xgameboy-spaceecho.textile
+++ b/audio/_posts/2010-12-23-c64-machinedrum-2xgameboy-spaceecho.textile
@@ -2,6 +2,6 @@
 layout: audio
 title: 'Machinedrum 2xGameboy Space Echo'
 file: '2010-12-23-c64-machinedrum-2xgameboy-spaceecho.mp3'
-background: '3972080296_31bce23637_o.jpg'
-color: '#FF67AA'
+background: '4793353914_f629b2774e_o.jpg'
+color: '#FFF'
 ---
