--- a/audio/_posts/2011-05-11-recorded-on-a-dirty-tape-01.textile
+++ b/audio/_posts/2011-05-11-recorded-on-a-dirty-tape-01.textile
@@ -2,6 +2,6 @@
 layout: audio
 title: 'recorded on a dirty tape'
 file: '2011-05-11-recorded-on-a-dirty-tape-01.mp3'
-background: '3972080296_31bce23637_o.jpg'
-color: '#FF67AA'
+background: '3972090354_3566546409_o.jpg'
+color: '#333'
 ---
