--- a/audio/_posts/2012-09-21-shsunsyn.textile
+++ b/audio/_posts/2012-09-21-shsunsyn.textile
@@ -2,6 +2,6 @@
 layout: audio
 title: 'SHSUNSYN'
 file: '2012-09-21-shsunsyn.mp3'
-background: '3972080296_31bce23637_o.jpg'
-color: '#FF67AA'
+background: 'DSC00101.jpg'
+color: 'white'
 ---
