--- a/audio/_posts/2010-06-02-i-need-space.textile
+++ b/audio/_posts/2010-06-02-i-need-space.textile
@@ -2,6 +2,6 @@
 layout: audio
 title: 'I need Space'
 file: '2010-06-02-i-need-space.mp3'
-background: 'greatdivide_etm_2002220_lrg.jpg'
-color: '#FF67AA'
+background: '3972045448_b2e8dd5cf8_o.jpg'
+color: '#C6B1C7'
 ---
