--- a/audio/_posts/2005-10-06-berlin-lover-2.textile
+++ b/audio/_posts/2005-10-06-berlin-lover-2.textile
@@ -4,5 +4,5 @@ title: 'Berlin Lover-2'
 tags: 'othertag'
 file: '2005-10-06-berlin-lover-2.mp3'
 background: 'P1030482.jpg'
-color: '#000'
+color: '#04044D'
 ---
