--- a/audio/_posts/2009-11-05-police.textile
+++ b/audio/_posts/2009-11-05-police.textile
@@ -5,3 +5,13 @@ file: '2009-11-05-police.mp3'
 background: '9a21f1d86c711b9a5700fdfbd9ffd9e72fa2830f'
 color: '#007AFF'
 ---
+
+<notextile>
+<style>
+.char2 {
+vertical-align: top;
+margin-left: -0.023em;
+}
+
+</style>
+</notextile>
