--- a/audio/_posts/2012-09-28-jumpandrun.textile
+++ b/audio/_posts/2012-09-28-jumpandrun.textile
@@ -7,31 +7,14 @@ color: '#FFF'
 ---
 <notextile>
 <style>
-
-.char9 {
-vertical-align: top;
-margin-left: -0.023em;
-}
-
-.char5 {
-vertical-align: top;
-margin-left: -0.056em;
-}
-
- .char7 {
-vertical-align: top;
-margin-left: -0.017em;
-}
-
-.char10 {
-vertical-align: top;
-margin-left: -0.017em;
-}
-
- .char2 {
-vertical-align: top;
-margin-left: -0.017em;
-}
-
+.char7 { margin-left: -0.017em; }
+.char10 { margin-left: -0.017em; }
+.char2 { margin-left: -0.017em; }
+.char5 { margin-left: 0.083em; }
+.char8 { margin-left: 0.071em; }
+.char6 { margin-left: -0.011em; }
+.char3 { margin-left: -0.019em; }
+.char4 { margin-left: -0.008em; }
+.char9 { margin-left: -0.023em; }
 </style>
 </notextile>
