--- a/audio/_posts/2013-02-10-daydreamer.textile
+++ b/audio/_posts/2013-02-10-daydreamer.textile
@@ -5,3 +5,12 @@ file: '2013-02-10-daydreamer.mp3'
 background: '59f140284dc34699b6912a329c00060fecbc966f'
 color: '#E2E4B9'
 ---
+
+<notextile>
+<style>
+.char4 { margin-left: -0.015em; }
+.char3 { margin-left: -0.011em; }
+.char8 { margin-left: -0.004em; }
+.char6 { margin-left: -0.011em; }
+</style>
+</notextile>
