--- a/audio/_posts/2005-05-02-drowning.textile
+++ b/audio/_posts/2005-05-02-drowning.textile
@@ -1,7 +1,7 @@
 ---
 layout: audio
 title: 'drowning'
-tags: 'testtag othertag'
+tags: ''
 file: '2005-05-02-drowning.mp3'
 background: 'b1a73c13d331180a021574aa3c874cad45c7ef75'
 color: '#FFF'
