--- a/drafts/_posts/2013-03-10-template3.textile
+++ b/drafts/_posts/2013-03-10-template3.textile
@@ -3,6 +3,6 @@ layout: audio
 title: 'Template'
 file: '2013-02-10-daydreamer.mp3'
 background: '37399001cafc7824d4346688dfce400a2c2d6690'
-color: '#E2E4B9'
+color: '#FFF'
 ---
 
