--- a/drafts/_posts/2013-03-10-template4.textile
+++ b/drafts/_posts/2013-03-10-template4.textile
@@ -3,6 +3,6 @@ layout: audio
 title: 'Template'
 file: '2013-02-10-daydreamer.mp3'
 background: '2d932dfe41baa49316d9a0f26c07b4a759a66698'
-color: '#E2E4B9'
+color: '#E0FF00'
 ---
 
