--- a/drafts/_posts/2013-03-10-template7.textile
+++ b/drafts/_posts/2013-03-10-template7.textile
@@ -3,6 +3,6 @@ layout: audio
 title: 'Template'
 file: '2013-02-10-daydreamer.mp3'
 background: 'b9e19b90e011c6e7fe1810901a6bea803e52f04d'
-color: '#E2E4B9'
+color: '#FFF'
 ---
 
