--- a/audio/_posts/2008-01-29-in-a-world.textile
+++ b/audio/_posts/2008-01-29-in-a-world.textile
@@ -2,6 +2,7 @@
 layout: audio
 title: 'in a world'
 file: '2008-01-29-in-a-world.mp3'
+tags: 'Ambient'
 background: '0316ee36f03321f923f234c94c038a15484fdfe5'
 color: '#032161'
 ---
