--- a/audio/_posts/2012-04-16-sid-valley.textile
+++ b/audio/_posts/2012-04-16-sid-valley.textile
@@ -2,6 +2,7 @@
 layout: audio
 title: 'Sid Valley'
 file: '2012-04-16-sid-valley.mp3'
+tags: 'Commodore64'
 background: 'bb83d9955d03c447cda82f353e1a8b1f3e7d55c3'
 color: '#FFF'
 ---
