--- a/audio/_posts/2005-03-03-namenloser-schlaf.textile
+++ b/audio/_posts/2005-03-03-namenloser-schlaf.textile
@@ -2,6 +2,7 @@
 layout: audio
 title: 'Namenloser Schlaf'
 file: '2005-03-03-namenloser-schlaf.mp3'
+tags: 'Ambient'
 background: 'a03c34ee07d9594b29b3e0e69ffe6ec7ad202e3f'
 color: '#E0E0E0'
 ---
