--- a/audio/_posts/2005-10-06-berlin-lover-2.textile
+++ b/audio/_posts/2005-10-06-berlin-lover-2.textile
@@ -1,7 +1,7 @@
 ---
 layout: audio
 title: 'Berlin Lover-2'
-tags: 'othertag'
+tags: ''
 file: '2005-10-06-berlin-lover-2.mp3'
 background: '55b52bab6034efe98efd85397aeccb6b3286248d'
 color: '#FF5200'
