--- a/audio/_posts/2008-11-19-busfahren.textile
+++ b/audio/_posts/2008-11-19-busfahren.textile
@@ -2,6 +2,7 @@
 layout: audio
 title: 'Busfahren'
 file: '2008-11-19-busfahren.mp3'
+tags: 'Ambient'
 background: 'c6e20c5cdb57af7a6faf337c75c9eaeab441b27f'
 color: '#EEE'
 ---
