--- a/audio/_posts/2010-12-23-c64-machinedrum-2xgameboy-spaceecho.textile
+++ b/audio/_posts/2010-12-23-c64-machinedrum-2xgameboy-spaceecho.textile
@@ -2,6 +2,7 @@
 layout: audio
 title: 'Machinedrum 2xGameboy Space Echo'
 file: '2010-12-23-c64-machinedrum-2xgameboy-spaceecho.mp3'
+tags: 'GameBoy-Shit'
 background: '08db85e421d94819c7c5ff10a1af694ef9640ed2'
 color: '#FFF'
 ---
