--- a/audio/_posts/2012-09-28-jumpandrun.textile
+++ b/audio/_posts/2012-09-28-jumpandrun.textile
@@ -2,6 +2,7 @@
 layout: audio
 title: 'JumpAndRun'
 file: '2012-09-28-jumpandrun.mp3'
+tags: 'Commodore64'
 background: 'f0dc4750230b02c774c0edb4f55fbf761f1e85a1'
 color: '#FFF'
 ---
