--- a/audio/_posts/2012-10-07-wurmloch.textile
+++ b/audio/_posts/2012-10-07-wurmloch.textile
@@ -2,6 +2,7 @@
 layout: audio
 title: 'Wurmloch'
 file: '2012-10-07-wurmloch.mp3'
+tags: 'Commodore64'
 background: '83c13bf77fe3e49634779320f45882e377267228'
 color: '#FDDFB2'
 ---
