--- a/audio/_posts/2013-02-09-alone.textile
+++ b/audio/_posts/2013-02-09-alone.textile
@@ -2,6 +2,7 @@
 layout: audio
 title: 'Alone'
 file: '2013-02-09-alone.mp3'
+tags: 'Ambient'
 background: 'ce4e06b681a97eeb376e0f6dfdefd2cedab60f09'
 color: '#FF67AA'
 ---
