add new posts and description

--- a/audio/_posts/2005-04-19-nanoland.textile
+++ b/audio/_posts/2005-04-19-nanoland.textile
@@ -3,6 +3,7 @@ layout: audio
 title: 'nanoland'
 file: '2005-04-19-nanoland.mp3'
 tags: 'GameBoy-Shit'
+description: 'klangforscher's audio track.'
 background: 'ecf52e97ce16689549ab51e28004957c6e87f55a'
 color: '#FFF'
 ---
