--- a/audio/_posts/2006-02-06-monomachine-s1.textile
+++ b/audio/_posts/2006-02-06-monomachine-s1.textile
@@ -2,6 +2,8 @@
 layout: audio
 title: 'monoMACHINE S1'
 file: '2006-02-06-monomachine-s1.mp3'
+tags: 'Monomachine'
+description: 'klangforscher's audio track.'
 background: '93fdcc90e5488d1a035fb1e12ac88db7ba547ab7'
 color: '#FFF'
 ---
