--- a/audio/_posts/2009-11-05-police.textile
+++ b/audio/_posts/2009-11-05-police.textile
@@ -2,6 +2,7 @@
 layout: audio
 title: 'Police'
 file: '2009-11-05-police.mp3'
+description: 'klangforscher's audio track.'
 background: '9a21f1d86c711b9a5700fdfbd9ffd9e72fa2830f'
 color: '#007AFF'
 ---
