--- a/audio/_posts/2010-06-02-i-need-space.textile
+++ b/audio/_posts/2010-06-02-i-need-space.textile
@@ -3,6 +3,7 @@ layout: audio
 title: 'I need Space'
 file: '2010-06-02-i-need-space.mp3'
 tags: 'Ambient'
+description: 'klangforscher's audio track.'
 background: 'fb4d89028f331065db10bd5b0df76bae7e5c0113'
 color: '#C6B1C7'
 ---
