--- a/audio/_posts/2007-12-06-nemesis.textile
+++ b/audio/_posts/2007-12-06-nemesis.textile
@@ -2,7 +2,7 @@
 layout: audio
 title: 'Nemesis'
 file: '2007-12-06-nemesis.mp3'
-description: 'klangforscher's audio track.'
+description: "klangforscher's audio track."
 background: '3cc6e2459f38b5e36e60f2aca7a0a9bc2c2c3ab9'
 color: '#363C80'
 ---
