--- a/audio/_posts/2009-01-21-d1a2.textile
+++ b/audio/_posts/2009-01-21-d1a2.textile
@@ -2,7 +2,7 @@
 layout: audio
 title: 'D1A2'
 file: '2009-01-21-d1a2.mp3'
-description: 'klangforscher's audio track.'
+description: "klangforscher's audio track."
 background: '397a2c57ed623e46720be154ce7a5b18c3bde577'
 color: '#FFF'
 ---
