--- a/audio/_posts/2010-02-24-car-driver.textile
+++ b/audio/_posts/2010-02-24-car-driver.textile
@@ -2,7 +2,7 @@
 layout: audio
 title: 'Car Driver'
 file: '2010-02-24-car-driver.mp3'
-description: 'klangforscher's audio track.'
+description: "klangforscher's audio track."
 background: '86ee207b721caa2ec8f1f53feebba7728bece708'
 color: '#090950'
 ---
