--- a/audio/_posts/2011-05-11-analog.textile
+++ b/audio/_posts/2011-05-11-analog.textile
@@ -3,7 +3,7 @@ layout: audio
 title: 'Analog'
 file: '2011-05-11-analog.mp3'
 tags: 'Ambient'
-description: 'klangforscher's audio track.'
+description: "klangforscher's audio track."
 background: '37399001cafc7824d4346688dfce400a2c2d6690'
 color: '#FFF'
 ---
