--- a/audio/_posts/2012-04-23-predators-bathroom.textile
+++ b/audio/_posts/2012-04-23-predators-bathroom.textile
@@ -3,7 +3,7 @@ layout: audio
 title: 'Predators Bathroom'
 file: '2012-04-23-predators-bathroom.mp3'
 tags: 'Commodore64'
-description: 'klangforscher's audio track.'
+description: "klangforscher's audio track."
 background: '017c4b82964d0fdc23ec863eb8a55ae7c1186821'
 color: '#0B1938'
 ---
