--- a/audio/_posts/2006-12-15-gameboy-2.textile
+++ b/audio/_posts/2006-12-15-gameboy-2.textile
@@ -3,7 +3,7 @@ layout: audio
 title: 'Gameboy 2'
 file: '2006-12-15-gameboy-2.mp3'
 tags: 'GameBoy-Shit'
-description: 'klangforscher's audio track.'
+description: "klangforscher's audio track."
 background: 'c19b5f881395be3434e3686538d7731630b1fd82'
 color: '#342C8B'
 ---
